# EpicClicker

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: application.cpp  application.h  main.cpp
src/clicker/: clicker.cpp  clicker.h
src/ui/: ui.cpp  ui.h
